--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+  <h1>Little Twin Stars</h1>
+  <h2>The Movie</h2>
+  </header>
 
    <div class="player">
      <video class="player__video viewer" src="assets/little-twin-stars-movie.mp4"></video>
