image out of background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Little Twin Stars</h1>
   <h2>The Movie</h2>
   </header>
+  <img src="assets/twinstars.png">
 
    <div class="player">
      <video class="player__video viewer" src="assets/little-twin-stars-movie.mp4"></video>
