--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <header>
   <h1>Little Twin Stars</h1>
-  <h2>The Movie</h2>
+  <h2>--- The Movie ---</h2>
   </header>
   <img src="assets/twinstars.png">
 
