--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 
    <div class="player">
      <video class="player__video viewer" src="assets/little-twin-stars-movie.mp4"></video>
-
+     <div class="player__controls">
+        <div class="progress">
+         <div class="progress__filled"></div>
+        </div>
+        <button class="player__button toggle" title="Toggle Play">►</button>
+        <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
+        <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
+        <button data-skip="-10" class="player__button">« 10s</button>
+        <button data-skip="25" class="player__button">10s »</button>
+      </div>
+    </div>
   <script src="index.js"></script>
 </body>
 </html>
